# numerical_math

./: .gitignore  README.md  main.py
common/: draw.py
expressions/: expression.py  expression_builder.py  expression_parser.py  my_ll1.py
models/: task5.py
tasks/: task10.py  task10b.py  task11.py  task2.py  task4.py  task5.py  task6.py  task9.py
tasks/cpp/: CMakeLists.txt
tasks/cpp/task3/: seidel.cpp
tasks/cpp/task7/: 3digmat.cpp  BlasBasedMatrix.cpp  BlasBasedMatrix.h  SquareMatrix.h  a  jacobi.cpp  ludecomposer.cpp  ludecomposer.h  main.cpp
tasks/cpp/task8/: a  integralcalculator.cpp  integralcalculator.h  main.cpp
tasks/task3/: qr.py  seidel.py
tasks/task8/: integralcalculator.cpp  integralcalculator.h  main.cpp
tests/: test.py
